[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Team/RedKill/UnitRedKill.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Circle.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 15.0

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[sub_resource type="CircleShape2D" id=4]

[node name="UnitRedKil" type="RigidBody2D"]
collision_layer = 8
collision_mask = 1048567
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="MonitorArea1" type="Area2D" parent="."]
priority = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonitorArea1"]
shape = SubResource( 3 )

[node name="MonitorArea2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonitorArea2"]
shape = SubResource( 4 )
[connection signal="body_entered" from="MonitorArea1" to="." method="_on_MonitorArea1_body_entered"]
[connection signal="body_entered" from="MonitorArea2" to="." method="_on_MonitorArea2_body_entered"]
